--- a/src/app/modules/admin/components/commission-editor-modal/commission-editor-modal.component.html
+++ b/src/app/modules/admin/components/commission-editor-modal/commission-editor-modal.component.html
@@ -44,8 +44,13 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn close-btn" (click)="modalRef.hide()">{{ "HOME.EVENTS.EDIT.CANCEL" | translate }}</button>
-        <button type="submit" class="btn save-btn" (click)="addCommission()">
+        <button *ngIf="!loading; else loadSpinner" type="submit" class="btn save-btn" (click)="addCommission()">
             {{ "HOME.EVENTS.EDIT.UPDATE" | translate }}
         </button>
     </div>
+    <ng-template #loadSpinner>
+        <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </ng-template>
 </form>
