--- a/src/app/shared/components/profile-picture/profile-picture.component.html
+++ b/src/app/shared/components/profile-picture/profile-picture.component.html
@@ -1,7 +1,9 @@
-<img 
-    [src]="src || defaultImage" 
-    [style.height]="size" 
-    [style.width]="size" 
-    alt="profile-picture"
-    draggable="false"
->
+<div [title]="tooltip">
+    <img 
+        [src]="src || defaultImage" 
+        [style.height]="size" 
+        [style.width]="size" 
+        alt="profile-picture"
+        draggable="false"
+    >
+</div>
