--- a/src/app/modules/admin/pages/commissions/commissions.component.html
+++ b/src/app/modules/admin/pages/commissions/commissions.component.html
@@ -20,13 +20,38 @@
                     </mat-panel-title>
                     <mat-panel-description>{{ commission.id }}</mat-panel-description>
                 </mat-expansion-panel-header>
-                <div class="d-flex flex-wrap" cdkDropListGroup>
-                    <div *ngIf="commission.positions && commission.positions.length > 0; else rolesEmpty"
-                        cdkDropList [cdkDropListDisabled]="!editPositionsMode" cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropPosition(commission, $event)" class="d-flex gap-2 flex-wrap drag-list" multi>
-                        <mat-chip class="drag-box" cdkDrag *ngFor="let position of commission.positions; index as i" (click)="openPositionModal(commission, i)">{{i+1}}. {{ position.title | customTranslate }}</mat-chip>
-                        <mat-chip (click)="openPositionModal(commission)"><mdb-icon fas icon="add"></mdb-icon></mat-chip>
-                    </div>
-                </div>
+                <table *ngIf="commission.positions && commission.positions.length > 0; else rolesEmpty" class="table align-middle mb-0 mt-2 rounded">
+                    <thead class="bg-light">
+                        <tr>
+                            <th class="pb-1">Posición</th>
+                            <th class="pb-1">Titulo</th>
+                            <th class="pb-1 text-center">Miembros</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let position of commission.positions" (click)="openPositionModal(commission, i)" class="position-row">
+                            <td>{{ position.id }}</td>
+                            <td>{{ position.title | customTranslate }}</td>
+                            <td class="d-flex justify-content-center p-0" *ngIf="position.members.length > 0; else membersEmpty">
+                                <app-profile-picture-stack>
+                                    <div class="stack-item" *ngFor="let member of position.members">
+                                        <app-profile-picture size="3rem" [tooltip]="member.fullname" [src]="member.photoURL"></app-profile-picture>
+                                    </div>
+                                </app-profile-picture-stack>
+                            </td>
+                            <ng-template #membersEmpty>
+                                <td class="text-center">Sin miembros</td>
+                            </ng-template>
+                        </tr>
+                        <tr (click)="openPositionModal(commission)" class="position-row">
+                            <td colspan="3">
+                                <div class="d-flex w-100 justify-content-center">
+                                    <mdb-icon fas icon="add"></mdb-icon>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
                 <ng-template #rolesEmpty>
                     <div class="d-flex flex-row justify-content-center align-items-center gap-3">
                         <p class="d-inline m-0">No hay roles en esta comisión</p>
