--- a/src/app/shared/components/profile-picture/profile-picture.component.css
+++ b/src/app/shared/components/profile-picture/profile-picture.component.css
@@ -4,3 +4,33 @@ img {
     border-radius: 50%;
     object-fit: cover;
 }
+
+div[title] {
+    position: relative;
+}
+
+div[title]::before {
+    content: attr(title);
+    opacity: 0;
+    font-family: Roboto, -apple-system, sans-serif;
+    text-transform: capitalize;
+    font-size: 11px;
+    position: absolute;
+    background-color: #3f3f3f;
+    color: #fff;  
+    padding: 0px 4px;
+    border-radius: 3px;
+    display: block;
+    left: 50%;
+    transform: translateY(-1.5rem) translateX(-50%);
+    text-wrap: nowrap;
+    -webkit-transition: opacity 0.25s ease;
+    -moz-transition: opacity 0.25s ease;
+    -ms-transition: opacity 0.25s ease;
+    -o-transition: opacity 0.25s ease;
+    transition:  opacity 0.25s ease-out;
+}
+
+div[title]:hover::before {
+    opacity: 1;
+}
