--- a/src/app/shared/components/individual-card/individual-card.component.html
+++ b/src/app/shared/components/individual-card/individual-card.component.html
@@ -23,9 +23,9 @@
             </mdb-card-title>
 
             <!-- Cargo de la persona -->
-            <mdb-card-text *ngIf="person.roles !== 'NULL'" id="roleTextContainer">
-              <h5 class="roleTextContainer">{{ person.roles | translate }}</h5>
-            </mdb-card-text>
+<!--            <mdb-card-text *ngIf="person.roles !== 'NULL'" id="roleTextContainer">-->
+<!--              <h5 class="roleTextContainer">{{ person.roles | translate }}</h5>-->
+<!--            </mdb-card-text>-->
 
           <div class="iconContainer">
             <!-- Linkedin -->
@@ -33,7 +33,7 @@
               <i class="fab fa-lg fa-linkedin"></i>
             </a>
             <!-- Mail -->
-            <a class="cardIcon" href="mailto:{{person.mail}}" target="_blank">
+            <a class="cardIcon" href="mailto:{{person.email}}" target="_blank">
               <i class="fas fa-lg fa-envelope"></i>
             </a>
           </div>
