--- a/src/app/modules/admin/pages/commissions/commissions.component.html
+++ b/src/app/modules/admin/pages/commissions/commissions.component.html
@@ -32,7 +32,7 @@
                         <tr *ngFor="let position of commission.positions; index as i" (click)="openPositionModal(commission, i)" class="position-row">
                             <td>{{ position.id }}</td>
                             <td>{{ position.title | customTranslate }}</td>
-                            <td class="d-flex justify-content-center p-0" *ngIf="position && position.members.length > 0; else membersEmpty">
+                            <td class="d-flex justify-content-center p-0" *ngIf="position && position.members && position.members.length > 0; else membersEmpty">
                                 <app-profile-picture-stack>
                                     <div class="stack-item" *ngFor="let member of position.members">
                                         <app-profile-picture size="3rem" [tooltip]="member.name" [src]="member.photo"></app-profile-picture>
