feat: team view and team request form

--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -13,12 +13,12 @@
   </div>
 
   <div class="team-container">
-    <div *ngIf="team$ | async as team; else loading">
+    <div *ngIf="team; else loading">
         <mat-expansion-panel *ngFor="let commission of team" class="mat-elevation-z0 expansion-panel">
             <mat-expansion-panel-header>
                 <mat-panel-title>{{ commission.title | customTranslate }}</mat-panel-title>
             </mat-expansion-panel-header>
-            <app-team-card [team]="commission.members"></app-team-card>
+            <app-team-card [team]="commission"></app-team-card>
         </mat-expansion-panel>
     </div>
       <ng-template #loading>
