--- a/src/app/modules/authentication/profile/tabs/general/general.component.html
+++ b/src/app/modules/authentication/profile/tabs/general/general.component.html
@@ -13,20 +13,7 @@
                 <input name="fullname" type="text" id="fullname" [(ngModel)]="changes.fullname" [value]="(user$ | async).fullname" matInput>
             </mat-form-field>
             <div class="row">
-                <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center gap-4">
-                    <app-profile-picture size="150px" [src]="changes.photoURL" />
-                    <div class="picture-buttons d-flex flex-column justify-content-center gap-4">
-                        <input #pictureInput type="file" (change)="uploadPicture($event)" accept="image/png, image/jpeg, image/jpg" class="d-none">
-                        <button mat-raised-button (click)="pictureInput.click()" class="save-button" color="secondary" type="button">
-                            <mdb-icon fas icon="upload" class="mr-1"></mdb-icon>
-                            {{ 'PROFILE.BUTTONS.PICTURE_UPLOAD' | translate }}
-                        </button>
-                        <button mat-raised-button (click)="deletePicture()" color="warn" type="button">
-                            <mdb-icon fas icon="times" class="mr-1"></mdb-icon>
-                            {{ 'PROFILE.BUTTONS.PICTURE_DELETE' | translate }}
-                        </button>
-                    </div>
-                </div>
+                <app-upload-picture-input [(photoURL)]="changes.photoURL" [(pictureType)]="picturetype"></app-upload-picture-input>
             </div>
         </form>
     </mat-card-content>
