--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,12 @@ p { line-height: 1.5; }
   line-height: 1.5;
 }
 
+@media (max-width: 768px) {
+    .main-container {
+        padding: 10rem 3% 5rem 3%;
+    }
+}
+
 .carrousel-card {
   width: fit-content !important;
 }
@@ -56,7 +62,7 @@ p { line-height: 1.5; }
   font-weight: 500;
 }
 
-.event li > p{ 
+.event li > p{
   margin: 0;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
