feat: team request form and table

--- a/src/app/modules/admin/pages/commissions/commissions.component.css
+++ b/src/app/modules/admin/pages/commissions/commissions.component.css
@@ -1,4 +1,4 @@
-.rotate {
+.icon-rotate {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
