--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,24 @@ p { line-height: 1.5; }
   75% { transform: translateX(5px) }
   100% { transform: translateX(0) }
 }
+
+@-moz-keyframes spin {
+    100% { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform:rotate(360deg);
+    }
+}
+
+.rotate {
+    animation: spin 1s infinite linear;
+}
+
+.shake {
+    animation: horizontal-shaking 0.4s infinite;
+}
